# sunnybridge-mvp

./: .env.example  .gitignore  CONTRIBUTING.md
apps/: package.json
backend/: .env.example  pyproject.toml
backend/alembic/versions/: V001_create_core_tables.sql  V001_create_core_tables_test.sql
backend/app/: __init__.py  main.py
backend/app/api/: admin_users.py  approval.py  auth.py  child.py  course.py  dashboard.py  event.py  export.py  feedback.py  finance.py  hours_log.py  payment.py  reading.py  reading_courses.py  refund.py  resource.py  roles.py  saved_filters.py  search.py  settings.py  settlement.py  teacher.py
backend/app/core/: config.py  cover_utils.py  database.py  deps.py  redis.py  security.py  storage.py
backend/app/models/: __init__.py
backend/app/schemas/: approval.py  auth.py  child.py  course.py  event.py  feedback.py  payment.py  reading.py  resource.py  setting.py  settlement.py  teacher.py
backend/app/services/: approval.py  auth.py  child.py  course.py  event.py  feedback.py  payment.py  reading.py  resource.py  settlement.py  teacher.py
backend/migrations/: 20250622_create_settlements.sql
backend/scripts/: add_refund_columns.py  create_settlements_table.py
backend/tests/: conftest.py  test_api_teachers.py  test_auth.py  test_auth_admin_parent.py  test_auth_sms.py  test_auth_teacher.py  test_children.py  test_course_payment_settlement_e2e.py  test_courses.py  test_reading.py
docs/: CHANGELOG_admin02.md  CHANGELOG_teacher_password_login.md  CHANGELOG_test01.md  CHANGELOG_test02.md  CHANGELOG_test03.md  IA.md  TECH-SPEC.md  (+3 more)
(+278 files in other folders)
