[project]
name = "sunnybridge-backend"
version = "0.1.0"
description = "SunnyBridge MVP Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # sqlalchemy+asyncpg: only needed when SUPABASE_DB_URL is set (paid plan)
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "PyJWT[crypto]>=2.8",
    "bcrypt>=4.0",
    "cryptography>=42",
    "httpx>=0.27",
    "redis>=5.0",
    "pymupdf>=1.24",
    "supabase>=2.4",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
